# audio-blog-backend-rust

./: .gitignore  Cargo.toml
migrations/: 20250520135135_create_users.sql  20250520135141_create_categories.sql  20250520135145_create_articles.sql  20250520135148_create_images.sql  20250521071052_create_users_table.sql  20250521071121_create_posts_table.sql  20250521073942_create_articles_table.sql
src/: db.rs  main.rs
src/handlers/: articles.rs  auth.rs  categories.rs  mod.rs
src/models/: article.rs  category.rs  image.rs  user.rs
