[package]
name = "audio-blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
